--- a/settings.ini
+++ b/settings.ini
@@ -38,6 +38,6 @@ status = 3
 user = tripathysagar
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = torch  graphviz
 # dev_requirements = 
 # console_scripts =
