after Lora and transformer generate

--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -2,5 +2,5 @@ website:
   sidebar:
     contents:
       - index.ipynb
-      - 01_Broadcasting.ipynb
-      - 02_cnn_basics.ipynb
+      - 01_LLMForwardPass.ipynb
+      - 02_LoRAPytorch.ipynb
