--- a/settings.ini
+++ b/settings.ini
@@ -6,7 +6,7 @@
 repo = sagaTrip
 lib_name = %(repo)s
 version = 0.0.1
-min_python = 3.7
+min_python = 3.9
 license = apache2
 black_formatting = False
 
@@ -38,6 +38,6 @@ status = 3
 user = tripathysagar
 
 ### Optional ###
-requirements = torch  graphviz
+requirements = torch torchvision transformers matplotlib numpy
 # dev_requirements = 
 # console_scripts =
