--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -5,3 +5,4 @@ website:
       - 01_LLMForwardPass.ipynb
       - 02_LoRAPytorch.ipynb
       - 03_DAFTSFT.ipynb
+      - 04_PythonWalkThrough.ipynb
