--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -8,3 +8,4 @@ website:
       - 04_PythonWalkThrough.ipynb
       - 05_GPTDecoder.ipynb
       - 06_MultiModal.ipynb
+      - 07_DistilationWeightInit.ipynb
