after 9th agent

--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -10,3 +10,4 @@ website:
       - 06_MultiModal.ipynb
       - 07_DistilationWeightInit.ipynb
       - 08_AgentFromFirstPrinciple.ipynb
+      - 09_KhazadDum.ipynb
