--- a/nbs/sidebar.yml
+++ b/nbs/sidebar.yml
@@ -11,3 +11,4 @@ website:
       - 07_DistilationWeightInit.ipynb
       - 08_AgentFromFirstPrinciple.ipynb
       - 09_KhazadDum.ipynb
+      - 10_BenchmarkingTOkenizer4Odia.ipynb
