--- a/nbs/_quarto.yml
+++ b/nbs/_quarto.yml
@@ -8,6 +8,7 @@ format:
     toc: true
 
 website:
+  bread-crumbs: false
   twitter-card: true
   open-graph: true
   repo-actions: [issue]
@@ -44,9 +45,8 @@ website:
     style: floating
     collapse-level: 1
     contents:
-      - section: "🏠 Home"
-        contents:
-          - index.ipynb
+      - text: "🏠 Home"
+        href: index.ipynb
       - section: "🧠 Transformers"
         contents:
           - 01_LLMForwardPass.ipynb
@@ -57,6 +57,7 @@ website:
           - 02_LoRAPytorch.ipynb
           - 03_DAFTSFT.ipynb
           - 07_DistilationWeightInit.ipynb
+          - 11_llm-arithmetic-experiments.ipynb
       - section: "🤖 Agents"
         contents:
           - 08_AgentFromFirstPrinciple.ipynb
